# SSPM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
readmes/: aws.md  azure.md
sspm/: __init__.py  cli.py
sspm/core/: engine.py  html_reporter.py  models.py  registry.py  reporter.py
sspm/providers/: base.py
sspm/providers/aws/: __init__.py  auth.py  collector.py  provider.py
sspm/providers/aws/rules/: __init__.py  base.py
sspm/providers/aws/rules/section2_iam/: cis_2_10.py  cis_2_11.py  cis_2_12.py  cis_2_13.py  cis_2_14.py  cis_2_15.py  cis_2_16.py  cis_2_17.py  cis_2_18.py  cis_2_19.py  cis_2_1_1.py  cis_2_1_2.py  cis_2_1_3.py  cis_2_1_4.py  cis_2_1_5.py  cis_2_1_6.py  cis_2_2.py  cis_2_20.py  cis_2_21.py  cis_2_3.py  cis_2_4.py  cis_2_5.py  cis_2_6.py  cis_2_7.py  cis_2_8.py  cis_2_9.py
sspm/providers/aws/rules/section3_storage/: cis_3_1_1.py  cis_3_1_2.py  cis_3_1_3.py  cis_3_1_4.py  cis_3_2_1.py  cis_3_2_2.py  cis_3_2_3.py  cis_3_2_4.py  cis_3_3_1.py
sspm/providers/aws/rules/section4_logging/: cis_4_1.py  cis_4_10.py  cis_4_2.py  cis_4_3.py  cis_4_4.py  cis_4_5.py  cis_4_6.py  cis_4_7.py  cis_4_8.py  cis_4_9.py
sspm/providers/azure/: __init__.py  auth.py  collector.py  provider.py
sspm/providers/azure/rules/: __init__.py  base.py
sspm/providers/gws/: auth.py  collector.py  provider.py
sspm/providers/gws/rules/: base.py
sspm/providers/ms365/: auth.py  collector.py  provider.py
sspm/providers/ms365/rules/: base.py
tests/: test_engine.py  test_reporter.py  test_rules_ms365.py
(+372 files in other folders)
