[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accuknox-sspm"
version = "0.1.0"
description = "AccuKnox SaaS Security Posture Management (SSPM) scanner"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AccuKnox", email = "security@accuknox.com" }]

dependencies = [
    "httpx>=0.27",
    "msal>=1.28",
    "click>=8.1",
    "pydantic>=2.7",
    "rich>=13.7",
    "anyio>=4.4",
    # Google Workspace provider (service account JWT signing)
    "cryptography>=42.0",
    # AWS provider
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[project.scripts]
sspm = "sspm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sspm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
